--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "auth",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node ./backend/index.js",
+    "devmon": "nodemon ./backend/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
