add JWT SECRET and NODE ENV

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI=mongodb+srv://plzinn666:xrbXup2KnIzt1lGb@cluster0.0jz6z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://plzinn666:xrbXup2KnIzt1lGb@cluster0.0jz6z.mongodb.net/auth_db?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=YTF7SYBY1nvMC+y4aR+UrBLZLUgmrcU3hCfprEXCjAo=
+NODE_ENV=development
