feat: Connect mailtrap API and make tests

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URI=mongodb+srv://plzinn666:xrbXup2KnIzt1lGb@cluster0.0jz6z.mongodb.net/auth_db?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=YTF7SYBY1nvMC+y4aR+UrBLZLUgmrcU3hCfprEXCjAo=
 NODE_ENV=development
+MAILTRAP_TOKEN=bc91b6f76e082b6dc0c7e25a1d93859e
+MAILTRAP_ENDPOINT=send.api.mailtrap.io
