--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET=YTF7SYBY1nvMC+y4aR+UrBLZLUgmrcU3hCfprEXCjAo=
 NODE_ENV=development
 MAILTRAP_TOKEN=bc91b6f76e082b6dc0c7e25a1d93859e
 MAILTRAP_ENDPOINT=send.api.mailtrap.io
+CLIENT_URL=http://localhost:5173
