feat: prepare to production

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NODE_ENV=development
 MAILTRAP_TOKEN=bc91b6f76e082b6dc0c7e25a1d93859e
 MAILTRAP_ENDPOINT=send.api.mailtrap.io
 CLIENT_URL=http://localhost:5173
+PORT=3001
